[package]
name = "epg-server"
version = "0.1.0"
authors = ["Alex Maystrenko <alexeytech@gmail.com>"]
edition = '2018'

[dependencies]
iron = "*"
router = "*"
mount = "0.4"
staticfile = "0.5"
persistent = "*"
urlencoded = "*"
multipart = "0.17"
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
tokio = "0.2"
hyperx = "0.14"
flate2 = "1.0"
quick-xml = "0.21"
failure = "*"
mime = "0.3"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2"
dotenv = "0.15"
recaptcha = "0.5"
rusqlite = { version = "0.23", features = ["functions"] }
migrant_lib = { version = "0.29", features = ["d-sqlite"] }
error-chain = "*"
askama = { version = "0.10", features = ["with-iron"] }
askama_iron = "0.10"
regex = "1.3"
lazy_static = "1.4"
vtext = "0.1.0-alpha.3"
sprs = "0.6.5"
rand = "*"

[dev-dependencies]
assert_approx_eq = "1.1"
matches = "0.1"
bencher = "*"
indoc = "0.3"
serial_test = "*"

ndarray = "*"
strsim = "0.9"
fuzzy_match = "*"
ngrammatic = "*"

[profile.dev]
# opt-level = 1

# [[bench]]
# name = "fuzzy"
# harness = false
